# pysoot

./: .gitignore  .pre-commit-config.yaml  README.md  build_test_apks.py  build_test_jars.py  hatch_build.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml
pysoot/: __init__.py  errors.py  jython_runner.py  jython_wrapper.py  lifter.py  soot_manager.py
pysoot/java/: PySootNative.java
pysoot/sootir/: __init__.py  soot_block.py  soot_class.py  soot_expr.py  soot_method.py  soot_statement.py  soot_value.py
tests/: test_pysoot.py
tests/test_samples/: run_samples.sh
