[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysoot"
version = "8.0.0.dev0"
description = "Python bindings for Shimple/Jimple IR from Soot."
urls = { Homepage = "https://github.com/angr/pysoot" }
requires-python = ">=3.10"
dependencies = ["frozendict"]

[tool.hatch.build.targets.wheel]
packages = ["pysoot"]
# libpysoot.* is produced by the GraalVM build hook (hatch_build.py); listed
# here so hatchling includes it in the wheel after the hook runs.
artifacts = ["pysoot/libpysoot.*"]

[tool.hatch.build.hooks.custom]
# Default hook path is hatch_build.py at the project root.

[dependency-groups]
testing = ["pytest", "pytest-xdist"]
dev = [
    { include-group = "testing" },
    "ruff>=0.15.4",
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "W",
]
